bugs: fixed the viewport issue on Safari for iOS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .h-view {
+        min-height: 100vh;
+        min-height: -webkit-fill-available;
+    }
+}
